--- a/packages/emoji-mart/src/components/Picker/PickerStyles.scss
+++ b/packages/emoji-mart/src/components/Picker/PickerStyles.scss
@@ -1,10 +1,9 @@
 :host {
   display: flex;
   width: min-content;
-  height: 435px;
-  min-height: 230px;
-  border-radius: var(--border-radius);
-  box-shadow: var(--shadow);
+  height: 100%;
+  min-height: 400px;
+  padding-top: 6px;
 
   --border-radius: 10px;
   --category-icon-size: 18px;
@@ -25,6 +24,10 @@
   --em-rgb-input: var(--rgb-input, 255, 255, 255);
   --em-color-border: var(--color-border, rgba(0, 0, 0, .05));
   --em-color-border-over: var(--color-border-over, rgba(0, 0, 0, .1));
+  --em-bg-color: #ffffff;
+  --em-category-name: #62676e;
+  --em-primary-color: #5867ff;
+  --em-input: #eeeeef;
 }
 
 [data-theme="dark"] {
@@ -34,6 +37,10 @@
   --em-rgb-input: var(--rgb-input, 0, 0, 0);
   --em-color-border: var(--color-border, rgba(255, 255, 255, .1));
   --em-color-border-over: var(--color-border-over, rgba(255, 255, 255, .2));
+  --em-bg-color: #21232a;
+  --em-category-name: #888c94;
+  --em-primary-color: #5867ff;
+  --em-input: #2A2E38;
 }
 
 #root {
@@ -41,7 +48,8 @@
   --color-b: rgba(var(--em-rgb-color), .65);
   --color-c: rgba(var(--em-rgb-color), .45);
 
-  --padding: 12px;
+  --padding-large: 20px;
+  --padding: 14px;
   --padding-small: calc(var(--padding) / 2);
 
   --sidebar-width: 16px;
@@ -60,8 +68,7 @@
   position: relative;
   width: 100%;
   text-align: left;
-  border-radius: var(--border-radius);
-  background-color: rgb(var(--em-rgb-background));
+  background-color: var(--em-bg-color);
 
   &[data-menu] {
     button { cursor: auto }
@@ -97,6 +104,7 @@
 .padding { padding: var(--padding) }
 .padding-t { padding-top: var(--padding) }
 .padding-lr { padding-left: var(--padding); padding-right: var(--padding) }
+.padding-lr-large { padding-left: var(--padding-large); padding-right: var(--padding-large) }
 .padding-r { padding-right: var(--padding) }
 .padding-small { padding: var(--padding-small) }
 .padding-small-b { padding-bottom: var(--padding-small)}
@@ -133,7 +141,7 @@
 
 a {
   cursor: pointer;
-  color: rgb(var(--em-rgb-accent));
+  color: var(--em-primary-color);
 
   &:hover { text-decoration: underline }
 }
@@ -166,7 +174,7 @@ a {
   &::-webkit-scrollbar-thumb {
     min-height: 20%;
     min-height: 65px;
-    border: 4px solid rgb(var(--em-rgb-background));
+    border: 4px solid var(--em-bg-color);
     border-radius: 8px;
 
     &:hover {
@@ -186,7 +194,7 @@ a {
   z-index: 1;
   top: -1px;
   font-weight: 500;
-  background-color: rgba(var(--em-rgb-background), .9);
+  background-color: rgba(var(--em-bg-color), .9);
   backdrop-filter: blur(4px);
 }
 
@@ -203,9 +211,14 @@ a {
     border: 0;
     outline: 0;
     width: 100%;
-    padding: 10px 2em 10px 2.2em;
-    border-radius: 10px;
-    background-color: var(--em-color-border);
+    font-size: 15px;
+    display: block;
+    width: 100%;
+    padding: 6px 25px 6px 13px;
+    border-radius: 4px;
+    outline: 0;
+    height: 40px;
+    background: var(--em-input);
     transition-duration: var(--duration);
     transition-property: background-color, box-shadow;
     transition-timing-function: var(--easing);
@@ -222,12 +235,6 @@ a {
     &::-webkit-search-results-decoration {
       appearance: none;
     }
-
-    &:focus {
-      background-color: rgb(var(--em-rgb-input));
-      box-shadow: inset 0 0 0 1px rgb(var(--em-rgb-accent)),
-                  0 1px 3px rgba(65,69,73,.2);
-    }
   }
 
   .icon {
@@ -236,10 +243,13 @@ a {
     top: 50%;
     color: rgba(var(--em-rgb-color), .7);
     transform: translateY(-50%);
+    right: 12px;
+    z-index: 2;
+    border: none;
   }
 
-  .loupe { left: .7em; pointer-events: none; }
-  .delete { right: .7em }
+  .loupe { pointer-events: none; }
+  .delete { right: 12px }
 }
 
 svg {
@@ -277,13 +287,12 @@ button {
     position: absolute;
     bottom: -12px; left: 0;
     width: 100%; height: 3px;
-    background-color: rgb(var(--em-rgb-accent));
-    border-radius: 3px 3px 0 0;
+    background-color: var(--em-primary-color);
     transition: transform var(--duration) var(--easing);
   }
 
   button[aria-selected] {
-    color: rgb(var(--em-rgb-accent));
+    color: var(--em-primary-color);
   }
 }
 
@@ -340,6 +349,15 @@ button {
     &[aria-selected] .background { opacity: 1 }
     &[data-keyboard] .background { transition: none }
   }
+
+  .category-name {
+    display: block;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 8px 6px;
+    height: 35px;
+    line-height: 35px;
+  }
 }
 
 .row {
@@ -374,7 +392,7 @@ button {
   white-space: nowrap;
   padding: 4px;
   border: 1px solid var(--em-color-border);
-  background-color: rgba(var(--em-rgb-background), .9);
+  background-color: rgba(var(--em-bg-color), .9);
   backdrop-filter: blur(4px);
   border-radius: 10px;
   box-shadow: 1px 1px 5px rgba(0,0,0, .05);
@@ -404,7 +422,7 @@ button {
     border: 0;
 
     &:checked + .option {
-      box-shadow: 0 0 0 2px rgb(var(--em-rgb-accent));
+      box-shadow: 0 0 0 2px var(--em-primary-color);
     }
   }
 }
@@ -416,7 +434,7 @@ button {
 
   &:hover {
     color: #fff;
-    background-color: rgb(var(--em-rgb-accent));
+    background-color: var(--em-primary-color);
   }
 }
 
