--- a/packages/emoji-mart/src/components/Picker/PickerStyles.scss
+++ b/packages/emoji-mart/src/components/Picker/PickerStyles.scss
@@ -37,7 +37,7 @@
   --em-rgb-input: var(--rgb-input, 0, 0, 0);
   --em-color-border: var(--color-border, rgba(255, 255, 255, .1));
   --em-color-border-over: var(--color-border-over, rgba(255, 255, 255, .2));
-  --em-bg-color: #21232a;
+  --em-bg-color: #1a1b20;
   --em-category-name: #888c94;
   --em-primary-color: #5867ff;
   --em-input: #2A2E38;
